--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-image: url("felix-mittermeier-6WZQkGI3V4s-unsplash\ -\ Copy.jpg");
+    background-image: url("space-md.jpg");
     background-size: cover;
         
    
